# VINS-Mono

./: .gitignore  README-original.md  README.md  install-deps.sh
.docker/: run.sh  (+2 more)
ar_demo/: CMakeLists.txt  package.xml
ar_demo/launch/: 3dm_bag.launch  ar_A3.launch  ar_rviz.launch  realsense_ar.launch  zed_bag.launch
ar_demo/src/: ar_demo_node.cpp
benchmark_publisher/: CMakeLists.txt  package.xml
benchmark_publisher/config/V2_03_difficult/: data.csv
benchmark_publisher/launch/: okvis_benchmark.launch  publish.launch
benchmark_publisher/src/: benchmark_publisher_node.cpp
camera_model/: CMakeLists.txt
camera_model/include/camodocal/calib/: CameraCalibration.h
camera_model/include/camodocal/camera_models/: Camera.h  (+1 more)
camera_model/src/: intrinsic_calib.cc
camera_model/src/calib/: CameraCalibration.cc
camera_model/src/camera_models/: CataCamera.cc  CostFunctionFactory.cc  ScaramuzzaCamera.cc
camera_model/src/chessboard/: Chessboard.cc
camodocal/: CMakeLists.txt  instruction  package.xml  readme.md
camodocal/cmake/: camodocalConfig.cmake.in
camodocal/src/calib/: CameraCalibration.cc
camodocal/src/camera_models/: Camera.cc  EquidistantCamera.cc
cv_bridge_1_11/: CHANGELOG.rst  CMakeLists.txt  package.xml  readme.txt  rosdoc.yaml  setup.py
cv_bridge_1_11/doc/: conf.py  index.rst  mainpage.dox
cv_bridge_1_11/include/cv_bridge/: cv_bridge.h  rgb_colors.h
cv_bridge_1_11/python/: CMakeLists.txt
cv_bridge_1_11/python/cv_bridge/: __init__.py  core.py
cv_bridge_1_11/src/: CMakeLists.txt  cv_bridge.cpp  module.cpp  module.hpp  module_opencv2.cpp  module_opencv3.cpp  rgb_colors.cpp
cv_bridge_1_11/src/boost/: README
cv_bridge_1_11/test/: CMakeLists.txt  conversions.py  enumerants.py  python_bindings.py  test_endian.cpp  test_rgb_colors.cpp  utest.cpp  utest2.cpp
data_generator/: CMakeLists.txt  package.xml
data_generator/src/: data_generator.cpp  data_generator.h  data_generator_node.cpp
feature_tracker/: CMakeLists.txt  package.xml
feature_tracker/cmake/: feature_trackerConfig.cmake.in
feature_tracker/include/feature_tracker/: feature_tracker.h  parameters.h
feature_tracker/launch/: euroc.launch
feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  parameters.cpp  parameters.h
feature_tracker_ros/: CMakeLists.txt  package.xml
feature_tracker_ros/include/: ros_parameter_reader.h
feature_tracker_ros/src/: feature_tracker_node.cpp  ros_parameter_reader.cpp
pose_graph/: CMakeLists.txt  package.xml
pose_graph/src/: keyframe.cpp  keyframe.h  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
pose_graph/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h
ros2_src/ar_demo/: CMakeLists.txt
ros2_src/ar_demo/include/: ar_demo_node.hpp
ros2_src/ar_demo/launch/: 3dm_bag.launch.py  ar_rviz.launch.py  realsense_ar.launch.py
ros2_src/ar_demo/src/: ar_demo_node.cpp
ros2_src/feature_tracker/: CMakeLists.txt  package.xml
ros2_src/feature_tracker/include/: feature_tracker_node.hpp  parameters_.hpp  tic_toc.hpp
ros2_src/feature_tracker/src/: feature_tracker.cpp  feature_tracker_node.cpp  parameters.cpp
ros2_src/vins_estimator/: CMakeLists.txt  package.xml
ros2_src/vins_estimator/include/: estimator.h  estimator_node.hpp  parameters_.h
ros2_src/vins_estimator/launch/: black_box.launch.py  cla.launch.py  euroc.launch.py  euroc_no_extrinsic_param.launch.py  realsense_color.launch.py  realsense_fisheye.launch.py
ros2_src/vins_estimator/src/: estimator.cpp  estimator_node.cpp  feature_manager.cpp  parameters.cpp
src/benchmark_publisher/: CMakeLists.txt  package.xml
src/benchmark_publisher/include/: benchmark_publisher_node.hpp
src/benchmark_publisher/src/: benchmark_publisher_node.cpp
src/camodocal/: CMakeLists.txt
src/config/: CMakeLists.txt  package.xml
src/config/config/: params.yaml
src/config/support_files/: brief_pattern.yml
src/pose_graph/: CMakeLists.txt  package.xml
src/pose_graph/include/: keyframe.h  parameters.h  pose_graph.h  pose_graph_node.hpp
src/pose_graph/src/: keyframe.cpp  parameters_.cpp  pose_graph.cpp  pose_graph_node.cpp
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/include/vins_estimator/: estimator.h  feature_manager.h  feature_tracker.h  parameters.h
vins_estimator/launch/: 3dm.launch  A3.launch  A3_config.yaml  ZED.launch  black_box.launch  cla.launch  euroc.launch  euroc_no_extrinsic_param.launch  lf_rig.launch  loitor.launch  realsense_color.launch  realsense_fisheye.launch  simulation.launch  tum.launch  uw_rig.launch  vins_rviz.launch  voxl_boson_imu0.launch  voxl_boson_vn100.launch  voxl_imu0_flight6.launch  voxl_imu0_walk1.launch  voxl_original_sensor.launch  voxl_tracking_vn100.launch  voxl_tracking_vn100_flight10-14.launch
vins_estimator/launch/test/: 3dm.launch  A3.launch  MH_01.launch  simulation.launch  vi_sensor.launch
vins_estimator/src/: check.cpp  estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  motion_only_estimator.cpp  motion_only_estimator.h  parameters.cpp  parameters.h  parameters_ros.cpp  parameters_ros.h  temp.cpp  wrapper.h
vins_estimator/src/factor/: imu_factor.h  imu_factor_pnp.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  perspective_factor.cpp  perspective_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  projection_factor.cpp  projection_factor.h  projection_td_factor.cpp
vins_estimator/src/feature_tracker/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  solve_5pts.cpp  solve_5pts.h
vins_estimator/src/loop-closure/: DLoopDetector.h  TemplatedLoopDetector.h  demoDetector.h  keyframe.cpp  keyframe.h  keyframe_database.cpp  keyframe_database.h  loop_closure.cpp  loop_closure.h
vins_estimator/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  utility.cpp  utility.h  visualization.cpp  visualization.h
(+151 files in other folders)
