<package format="2">
  <name>cv_bridge_1_11</name>
  <version>1.11.15</version>
  <description>
    This contains CvBridge, which converts between ROS
    Image messages and OpenCV images.
  </description>
  <author>Patrick Mihelich</author>
  <author>James Bowman</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/cv_bridge</url>
  <url type="repository">https://github.com/ros-perception/vision_opencv</url>
  <url type="bugtracker">https://github.com/ros-perception/vision_opencv/issues</url>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>python</build_depend>
  <build_depend>python-opencv</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>boost</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>
  <exec_depend>python</exec_depend>
  <exec_depend>python-opencv</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <test_depend>rostest</test_depend>
  <test_depend>python-numpy</test_depend>

  <doc_depend>dvipng</doc_depend>
</package>
